@@ -1,6 +1,6 @@
 <div id="menu">
   <h1>- Camlp5 -</h1>
-  <p>...work in progress... *<br/>...20th of July 2007...</p>
+  <p>...work in progress... *<br/>...21st of July 2007...</p>
   <ul>
     <li><a href="index.html">Overview</a></li>
   </ul>
